--- a/example/package.json
+++ b/example/package.json
@@ -14,20 +14,19 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.3.1",
     "@react-navigation/native": "^6.0.10",
-    "expo": "^45.0.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "~2.2.1",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-web": "0.17.7"
+    "expo": "^48.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
-    "@babel/core": "~7.18.2",
+    "@babel/core": "^7.20.0",
     "@babel/runtime": "^7.18.3",
-    "@types/react": "~17.0.21",
+    "@types/react": "~18.0.27",
     "babel-plugin-module-resolver": "^4.1.0",
-    "babel-preset-expo": "9.1.0",
-    "expo-cli": "^5.4.9"
+    "babel-preset-expo": "^9.3.0"
   }
 }
